23.0.17
-------


23.0.16
-------
(RB=1393433)
Add "$returnEntity" query parameter to support returning the entity on demand

(RB=1392687)
Added $reorder command for array items to Rest.li patch format.

(RB=1399487)
Log channel inception time when exception is thrown during writeAndFlush

23.0.15
-------
(RB=1394375)
Populate internal DataMap for gathered batch response.

(RB=1396585)
Updated gradle wrapper to version 4.6.

(RB=1396146)
Remove Guava dependency from compile in all modules except data-avro and restli-int-test

(RB=1395504)
Register coercers for custom typed typerefs in the generated TyperefInfo class.

23.0.14
-------
(RB=1393838)
Skip schema validation when the projection mask is empty.

23.0.13
-------
(RB=1391132)
Clean up ProjectionInfo interfaces to hide mutable API.
(RB=1391602)
Fix for reference to internal record.

23.0.12
------
(RB=1386162)
Fixed bug in ObjectIterator when using PRE_ORDER iteration order.

23.0.11
------
(RB=1386020)
Fix a race condition in AsyncSharedPoolImpl with createImmediately enabled

23.0.10
------
(RB=1385950)
fix requestTimeoutClient bug for override client provided timeout value

23.0.9
------
(RB=1371503)
Support scatter-gather in rest.li client using ScatterGatherStrategy.
(RB=1382408)
Add ProjectionInfo to prepare for emitting projection data into SCE.

23.0.8
------
(RB=1361590)
StreamCodec integration in Restli client

23.0.7
------
(RB=1375493)
Flipping the map order from Set<KEY> -> URI to URI -> Set<KEY> in URIMapper results
(RB=1373478)
Skip unstructured data check in RestLiValidationFilter

23.0.6
------
(RB=1373158)
Cache SessionValidator to save validating time

23.0.5
------
(RB=1345119)
add R2Constants.CLIENT_REQUEST_TIMEOUT_VIEW and refactor requestTimeoutClient to always pass timeout value down

(RB=1359940)
Enable ZK SymLink redirection by default

23.0.4
------
(RB=1356919)
Improve cache ability of data template and request builder generating task

23.0.3
------
(RB=1356168)