@@ -11,7 +11,12 @@
     },
     "supports" : [ "batch_create", "batch_delete", "batch_get", "batch_partial_update", "batch_update", "create", "get" ],
     "methods" : [ {
-      "method" : "create"
+      "method" : "create",
+      "parameters" : [ {
+        "name" : "unionRefParam",
+        "type" : "com.linkedin.restli.examples.typeref.api.UnionRefInline",
+        "optional" : true
+      } ]
     }, {
       "method" : "get"
     }, {
