@@ -1,0 +1,6 @@
+{
+  "type" : "typeref",
+  "name" : "UnionRefInline",
+  "namespace" : "com.linkedin.restli.examples.typeref.api",
+  "ref" : ["int", "string"]
+}
